--- a/extract_patches.ipynb
+++ b/extract_patches.ipynb
@@ -22,12 +22,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "warnings.filterwarnings(\"ignore\")"
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "if not os.path.exists(patches_root):\n",
+    "    os.makedirs(patches_root)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35,16 +38,16 @@
      "output_type": "stream",
      "text": [
       "Canon_Ixus55 in training set: 156.\n",
-      "Canon_Ixus55 in validation set: 27.\n",
-      "Canon_Ixus55 in test set: 41.\n",
+      "Canon_Ixus55 in validation set: 28.\n",
+      "Canon_Ixus55 in test set: 40.\n",
       "\n",
-      "Canon_Ixus70 in training set: 350.\n",
-      "Canon_Ixus70 in validation set: 94.\n",
-      "Canon_Ixus70 in test set: 123.\n",
+      "Canon_Ixus70 in training set: 358.\n",
+      "Canon_Ixus70 in validation set: 96.\n",
+      "Canon_Ixus70 in test set: 113.\n",
       "\n",
-      "Canon_PowerShotA640 in training set: 122.\n",
-      "Canon_PowerShotA640 in validation set: 35.\n",
-      "Canon_PowerShotA640 in test set: 31.\n",
+      "Canon_PowerShotA640 in training set: 114.\n",
+      "Canon_PowerShotA640 in validation set: 32.\n",
+      "Canon_PowerShotA640 in test set: 42.\n",
       "\n"
      ]
     }
@@ -67,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,22 +92,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "979it [00:00, 11723.06it/s]"
+      "979it [00:00, 52436.16it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting image data...\n",
-      "Extracting patches...\n"
+      "Collecting image data...\n"
      ]
     },
     {
@@ -113,11 +115,20 @@
      "text": [
       "\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting training patches...\n",
+      "Extracting validation patches...\n",
+      "Extracting testing patches...\n",
+      "Completed.\n"
+     ]
     }
    ],
    "source": [
     "print('Collecting image data...')\n",
-    "\n",
     "train_imgs_list = []\n",
     "val_imgs_list = []\n",
     "test_imgs_list = []\n",
@@ -154,54 +165,17 @@
     "                           'patch_root': patches_root,\n",
     "                           'img_root': dresden_images_root\n",
     "                           }]\n",
-    "    \n",
-    "print('Extracting patches...')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# num_processes = 12\n",
-    "num_processes = 4\n",
-    "pool = Pool(processes=num_processes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_paths = pool.map(split_extract.extract, train_imgs_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "val_paths = pool.map(split_extract.extract, val_imgs_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_paths = pool.map(split_extract.extract, test_imgs_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "num_processes = 12\n",
+    "# num_processes = 4\n",
+    "pool = Pool(processes=num_processes)\n",
+    "\n",
+    "print('Extracting training patches...')\n",
+    "train_paths = pool.map(split_extract.extract, train_imgs_list)\n",
+    "print('Extracting validation patches...')\n",
+    "val_paths = pool.map(split_extract.extract, val_imgs_list)\n",
+    "print('Extracting testing patches...')\n",
+    "test_paths = pool.map(split_extract.extract, test_imgs_list)\n",
     "print('Completed.')"
    ]
   }
@@ -222,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
